--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <th>
             <select id="Gender">
                 <option>-Select-</option>
-                <option>Mail</option>
-                <option>Femail</option>
+                <option>Male</option>
+                <option>Female</option>
             </select>
         </th>
     </tr>
@@ -52,9 +52,9 @@
 
 
 </table>
-
-<input type="button" value="Click here" onclick="call()">
-
+<br><br>
+<input type="button" value="Get Result" onclick="call()">
+<br><br><br>
 <div id="result"></div>
 </center>
 
