The Gender Have been correct

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <th>
             <select id="Gender">
                 <option>-Select-</option>
-                <option>Mail</option>
-                <option>Femail</option>
+                <option>Male </option>
+                <option>Female</option>
             </select>
         </th>
     </tr>
